--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,26 +1,16 @@
-# ── Stage 1: Build the React app ──
-FROM node:20-alpine AS builder
-
+# ── Stage 1: Build ──
+FROM node:20 AS builder
 WORKDIR /app
-
 COPY package*.json ./
-RUN npm ci
-
+RUN npm install
 COPY . .
 RUN npm run build
 
-# ── Stage 2: Serve with nginx ──
-FROM nginx:1.27-alpine
-
-# Remove default nginx config
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Copy our nginx config
+# ── Stage 2: Serve ──
+FROM nginx:stable-alpine
+# Copy our custom nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Copy built assets from builder
+# Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
-
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
