--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,8 +8,8 @@ RUN npm run build
 
 # ── Stage 2: Serve ──
 FROM nginx:stable-alpine
-# Copy our custom nginx config (pointing to the root of the context)
-COPY ../nginx.conf /etc/nginx/conf.d/default.conf
+# Copy our custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 # Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
