--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,7 +13,8 @@ server {
     # Proxy API requests to the backend (using public URL for reliability)
     location /api/ {
         proxy_pass https://well-log-app-production.up.railway.app;
-        proxy_set_header Host $host;
+        proxy_set_header Host well-log-app-production.up.railway.app;
+        proxy_ssl_server_name on;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
