--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,15 +10,16 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
 
-    # Proxy API requests to the backend (using public URL for reliability)
+    # Proxy API requests to the backend
     location /api/ {
         proxy_pass https://well-log-app-production.up.railway.app;
         proxy_set_header Host well-log-app-production.up.railway.app;
-        proxy_ssl_server_name on;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_ssl_server_name on;
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;
 
         # Longer timeouts for AI interpretation requests
         proxy_read_timeout 120s;
