Fix internal DNS and increase proxy timeouts

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,17 +10,17 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
 
-    # Proxy API requests to the backend using Direct Private Networking
+    # Proxy API requests to the backend using Railway Private DNS
     location /api/ {
-        proxy_pass http://well-log-app:8000;
+        proxy_pass http://well-log-app.railway.internal:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Longer timeouts for AI interpretation requests
-        proxy_read_timeout 120s;
-        proxy_connect_timeout 10s;
+        # Longer timeouts for internal communication
+        proxy_read_timeout 60s;
+        proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
 
         # Larger body for LAS file uploads
