--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,10 +18,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Longer timeouts for internal communication
-        proxy_read_timeout 60s;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
+        # Very long timeouts for heavy file uploads and AI processing
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
 
         # Larger body for LAS file uploads
         client_max_body_size 100M;
