Use direct service name for internal proxy

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,9 +10,9 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml image/svg+xml;
     gzip_min_length 256;
 
-    # Proxy API requests to the backend using Railway Private DNS
+    # Proxy API requests to the backend using Direct Railway Service DNS
     location /api/ {
-        proxy_pass http://well-log-app.railway.internal:8000;
+        proxy_pass http://well-log-app:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
